# biz.dfch.AsdSte100Vocab

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
src/biz/dfch/asdste100vocab/: __init__.py  __main__.py  builtin_vocab.py  cli.py  info.py  vocab.py  word.py  word_category.py  word_meaning.py  word_note.py  word_source.py  word_status.py  word_type.py
src/biz/dfch/asdste100vocab/commands/: __init__.py  args.py  change.py  new.py  remove.py
src/biz/dfch/asdste100vocab/data/: asdste100_issue9_base.jsonl  asdste100_issue9_base_names_lower.jsonl  asdste100_issue9_base_v0.5.1.jsonl  asdste100_issue9_technical_words.jsonl
src/biz/dfch/ste100vocab/: word.py  word_type.py
tests/: __init__.py
tests/asdste100vocab/: __init__.py  test_convert_name_to_lower_case.jsonl  test_convert_name_to_lower_case.py  test_convert_word_meaning.py  test_main.py  test_test.py  test_vocab.py  test_vocab_word_list1.jsonl  test_vocab_word_list2.jsonl  test_vocab_word_list3.jsonl  test_vocab_word_twice.jsonl  test_word.py  test_word_complete.jsonl  test_word_meaning.py  vocab_file.py
tests/ste100vocab/: test_main.py  test_vocab.py
