[build-system]
requires = ["setuptools>=81.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biz-dfch-ste100vocab"
version = "0.1.2"
description = "The ASD-STE100 (Simplified Technical English) Issue 9 vocabulary."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{name = "Ronald Rink"}]
maintainers = [  
    { name = "Ronald Rink" }  
]

keywords = [
  "ASD-STE100",
  "dictionary",
  "cnl",
  "controlled language",
  "controlled natural language",
  "simplified-technical-english",
  "Simplified Technical English",
  "STE100",
  "STE100 Issue 9",
  "technical writing",
  "technical-writing",
  "vocabulary"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Natural Language :: English",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]

dependencies = [
    "dacite>=1.9.2"
]

# Install project in editable mode:
# python -m pip install -e ".[dev]"
[project.optional-dependencies]
dev = [
    "twine",
    "build",
]

[project.urls]  
Homepage = "https://github.com/dfch/biz.dfch.AsdSte100Vocab.git"  
Issues = "https://github.com/dfch/biz.dfch.AsdSte100Vocab/issues"

[project.scripts]
ste100-vocab = "biz.dfch.asdste100vocab.__main__:main"

[tool.black]  
line-length = 80

[tool.setuptools]  
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
"biz.dfch.asdste100vocab" = [
    "data/*.jsonl",
    "py.typed"
]
